--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="resume">
         <div class="container">
           <div class="resume__block">
-            <h1 class="contact-info__header">Bulka</h1>
-            <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+            <h1 class="contact-info__header">Химич-Терлецька Ірина</h1>
+            <h3 class="contact-info__sub-header">beginr in Front End development</h3>
 
             <div class="contact_info_container fh">
               <div class="contact-info__block">
@@ -34,7 +34,7 @@
               <div class="contact-info__block contact-info__block--center">
                 <img
                   class="contact-info__avatar"
-                  src="assets.png"
+                  src="flowcode.png"
                   alt="Avatar"
                 />
               </div>
