--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                   </svg>
                 </div>
                 <p class="intro_text">
-                  Meow. I am a Binary Studio cat. Still got 7 lives. Work in IT,
-                  Full Stack Evil, all I do is sleep and try to help out hoomans
-                  with their projects whenever they need me.
+						Hi there. I am a teacher of information on maternity leave, 
+						who responded to the requests of my students and
+						despite the fact of that I will do it the first year I loved this field
                 </p>
               </div>
             </div>
@@ -86,7 +86,7 @@
 					<div class="resume__block">
 					  <div class="skills">
 						 <h3 class="skills__header">Skills</h3>
-						 <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+						 <p class="skills__text">communicative, sociable, creative, hardworking, active, always open to the new</p>
 					  </div>
 					</div>
 				 </div>
@@ -98,18 +98,16 @@
 							<h3 class="experiences__header">Experience</h3>
 							<div class="experiences__company">
 							  <div class="experiences__company-header">
-								 <span class="experiences__company-header-durability">For whole my life</span>
-								 <h3 class="experiences__company-header-name">BinaryStudio</h3>
+								 <span class="experiences__company-header-durability">Seven years</span>
+								 <h3 class="experiences__company-header-name">Zhovkva Secondary School No. 2</h3>
 							  </div>
 						 
 							  <div class="experiences__company-project">
-								 <span class="experiences__company-project-role">Binary Studio Cat</span>
-								 <h3 class="experiences__company-project-name">Hooman project</h3>
+								 <span class="experiences__company-project-role">teacher of computer science</span>
+								 <h3 class="experiences__company-project-name">My first project</h3>
 								 <ul class="experiences__company-project-responsibilities">
-									<li>Supported hoomans</li>
-									<li>Slept all the time</li>
-									<li>Lied on the keyboard</li>
-									<li>Watched my hoomans working</li>
+									<li>Resume</li>
+									<li>Game "Guess My Number </li>
 								 </ul>
 							  </div>
 							</div>
@@ -119,23 +117,32 @@
 							<div class="additional-info__education">
 							  <h3 class="additional-info__education-header">Education</h3>
 							  <div class="additional-info__education-university">
-								 <span class="additional-info__education-university-durability">2021</span>
-								 <h3 class="additional-info__education-university-speciality">Cat track</h3>
-								 <p class="additional-info__education-university-name">Binary Studio Academy</p>
+								 <span class="additional-info__education-university-durability">2012 </span>
+								 <h3 class="additional-info__education-university-speciality">Chemist technologist</h3>
+								 <p class="additional-info__education-university-name">OU "LP"</p>
 							  </div>
+							  <div class="additional-info__education-university">
+								<span class="additional-info__education-university-durability">2016</span>
+								<h3 class="additional-info__education-university-speciality">teacher of computer science</h3>
+								<p class="additional-info__education-university-name"> RDGU</p>
+							 </div>
 							</div>
 						 
 							<div class="additional-info__languages">
 							  <h3 class="additional-info__languages-header">Languages</h3>
 							  <p class="additional-info__languages-item">
-								 Meow dialect
+								Ukrainian (native language)
 							  </p>
 							  <p class="additional-info__languages-item">
-								 Ukrainian (understand)
-							  </p>
+								English (A2 and study every day)
+								</p>
+								<p class="additional-info__languages-item">
+							 Russian(understand)
+								</p>
 							  <p class="additional-info__languages-item">
-								 English (don't understand)
+								Polish (understand)
 							  </p>
+
 							</div>
 						 </div>
 					  </div>
