--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
           <div class="resume__block">
             <h1 class="contact-info__header">Химич-Терлецька Ірина</h1>
-            <h3 class="contact-info__sub-header">beginr in Front End development</h3>
+            <h3 class="contact-info__sub-header">beginner in Front End development</h3>
 
             <div class="contact_info_container fh">
               <div class="contact-info__block">
